[fix] genre at tv details, favicon, dark mode

--- a/app/globals.css
+++ b/app/globals.css
@@ -8,11 +8,17 @@ a {
 }
 
 :root {
-  --foreground-rgb: 0, 0, 0;
+  /* --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --background-end-rgb: 255, 255, 255; */
+
+  --foreground-rgb: 255, 255, 255;
+  --background-start-rgb: 0, 0, 0;
+  --background-end-rgb: 0, 0, 0;
 
   --fav-color: rgb(21, 94, 117);
+
+  --asdkfl: rgb(214, 219, 220);
 
   --swiper-theme-color: #f80000 !important;
 
@@ -78,13 +84,13 @@ a {
   font-style: normal;
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 255, 255, 255;
     --background-start-rgb: 0, 0, 0;
     --background-end-rgb: 0, 0, 0;
   }
-}
+} */
 
 body {
   color: rgb(var(--foreground-rgb));
